# gql-with-django

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
blog/: admin.py  models.py
blog/fixtures/: blog.json
blog/migrations/: 0001_initial.py
blogsite/: mutations.py  queries.py  schema.py  settings.py  types.py  urls.py
